--- a/src/components/MainPage/MainPage.scss
+++ b/src/components/MainPage/MainPage.scss
@@ -4,13 +4,13 @@
   font-family: 'Georgia', serif;
   font-size: 40px;
 
-  &_ingredients {
+  &__materials {
     background-color: #FDDDE9;
     display: inline-flex;
     flex: 50%;
   }
 
-  &_recipes {
+  &__recipes {
     background-color: #F4EDE7;
     display: inline-flex;
     flex: 50%;
